Added new endpoints, added JWT

--- a/RecomendationSystemAPI/appsettings.json
+++ b/RecomendationSystemAPI/appsettings.json
@@ -8,5 +8,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Key": "DevSecret_ReplaceThisWithAReallyLongRandomString"
+  },
   "AllowedHosts": "*"
 }
